# altair-flask-demo

./: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  Procfile  README.md  config.py  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: ci.yaml
app/: __init__.py  app.py  database.py  forms.py  plot.py  views.py
app/templates/: _formhelpers.html  _macros.html  base.html  index.html
flask_app/: app.py  database.py  plot.py
flask_app/templates/: base.html  index.html  plot.html
tests/: conftest.py  test_app.py  test_create_app.py  test_database.py  test_docker  test_plot.py
tests/data/: wells_test.db
